--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">TouchEvent</string>
+    <string name="app_name">Touch Events</string>
+    <string name="hello_activity">Hello Activity!</string>
 </resources>
